fix spacing issue with September month heading
Fix text overflow issue with calendar for September month

--- a/css/datepicker/base.css
+++ b/css/datepicker/base.css
@@ -128,6 +128,7 @@ div.datepicker th a.datepickerMonth {
   margin-left:20px;
 }
 div.datepicker .datepickerFirstView th a.datepickerMonth {
+  width: 150px;
   margin-left:0;
 }
 /* Day mode calendar body */
